put C++ examples in one directory: example/cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,8 +98,7 @@ add_subdirectory(src/bmp)
 add_subdirectory(src/gif)
 add_subdirectory(src/lua)
 add_subdirectory(src/py)
-add_subdirectory(example/bmp)
-add_subdirectory(example/gif)
+add_subdirectory(example/cpp)
 add_subdirectory(test/bmp)
 add_subdirectory(test/gif)
 add_subdirectory(test/util)
