add Lua/Python version, compiler info, date and time to Lua/Python module

--- a/cmake/config.h.in
+++ b/cmake/config.h.in
@@ -14,4 +14,8 @@
 #define PACKAGE_VERSION   "${PROJECT_VERSION}"
 #define PACKAGE_STRING    "${CMAKE_PROJECT_NAME} ${PROJECT_VERSION}"
 
+#define COMPILER_ID      "${CMAKE_CXX_COMPILER_ID}"
+#define COMPILER_VERSION "${CMAKE_CXX_COMPILER_VERSION}"
+#define COMPILER_STRING  "${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}"
+
 #endif //config_h
